<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.didact.u3_ejerciciobotones1.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/trama"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_primerplato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comida1" />

            <CheckBox
                android:id="@+id/cb_sopa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sopa" />

            <CheckBox
                android:id="@+id/cb_ensalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ensalada" />

            <CheckBox
                android:id="@+id/cb_nachos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nachos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_segundoplato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comida2" />

            <CheckBox
                android:id="@+id/cb_carne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carne" />

            <CheckBox
                android:id="@+id/cb_pescado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pescado" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_bebidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_pedido"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_pedido"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_bebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bebida" />

            <RadioGroup
                android:id="@+id/rg_bebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>


        <Button
            android:id="@+id/btn_pedido"
            android:onClick="pulsarPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/verPedido" />
    </RelativeLayout>

</LinearLayout>
